# xgalaga-sdl

./: .gitignore  CREDITS  INSTALL  LICENSE  Makefile.am  README  README.md  TODO  build.sh  build_install.sh  configure  configure.ac
src/: Makefile.am  SFont.c  TFont.c  config.h  data.c  data.h  defs.h  frate.c  highscore.c  images.c  images.h  main.c  proto.h  sdl.c  sound.c  sound.h  struct.h  title.c  xgalaga-sdl  xgalaga.h
src/.deps/: xgalaga_sdl-SFont.Po  xgalaga_sdl-TFont.Po  xgalaga_sdl-data.Po  xgalaga_sdl-explosions.Po  xgalaga_sdl-frate.Po  xgalaga_sdl-highscore.Po  xgalaga_sdl-images.Po  xgalaga_sdl-joystick.Po  xgalaga_sdl-main.Po  xgalaga_sdl-pathfile.Po  xgalaga_sdl-paths.Po  xgalaga_sdl-prize.Po  xgalaga_sdl-score.Po  xgalaga_sdl-sdl.Po  xgalaga_sdl-sound.Po  xgalaga_sdl-title.Po
